--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -2,9 +2,9 @@
     <div class="footer-container">
         <div class="footer-content">
             <div class="footer-links-left">
-                <a href="index.html" class="footer-nav-link">Home</a>
-                <a href="about-us.html" class="footer-nav-link">About Us</a>
-                <a href="privacy-policy.html" class="footer-nav-link">Privacy Policy</a>
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="about-us.html" class="nav-link">About Us</a>
+                <a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
             </div>
             
             <div class="footer-logo">
@@ -14,9 +14,9 @@
             </div>
             
             <div class="footer-links-right">
-                <a href="contact-us.html" class="footer-nav-link">Contact Us</a>
-                <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Start Lhoking</a>
-                <a href="terms-and-conditions.html" class="footer-nav-link">Terms and Conditions</a>
+                <a href="contact-us.html" class="nav-link">Contact Us</a>
+                <a href="https://www.instagram.com/lhok.ca/" class="nav-link" target="_blank">Start Lhoking</a>
+                <a href="terms-and-conditions.html" class="nav-link">Terms and Conditions</a>
             </div>
 
         </div>
@@ -32,9 +32,9 @@
     <div class="footer-grid">
 
       
-                <a href="index.html" class="footer-nav-link">Home</a>
-                <a href="about-us.html" class="footer-nav-link">About Us</a>
-                <a href="privacy-policy.html" class="footer-nav-link">Privacy Policy</a>
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="about-us.html" class="nav-link">About Us</a>
+                <a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
 
             
                 <div class="footer-logo">
@@ -43,10 +43,10 @@
                     </a>
                 </div>
             
-                <a href="contact-us.html" class="footer-nav-link">Contact Us</a>
-                <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Start Lhoking</a>
-                <a href="terms-and-conditions.html" class="footer-nav-link">Terms and Conditions</a>
-                    <a href="__user-approval-page.html" class="footer-nav-link">Admin Approval</a>
+                <a href="contact-us.html" class="nav-link">Contact Us</a>
+                <a href="https://www.instagram.com/lhok.ca/" class="nav-link" target="_blank">Start Lhoking</a>
+                <a href="terms-and-conditions.html" class="nav-link">Terms and Conditions</a>
+                    <a href="__user-approval-page.html" class="nav-link">Admin Approval</a>
         <div class="footer-bottom">
             <p>&copy; 2025 LHOK. All rights reserved.</p>
         </div>
