--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
 @import url('components/forms.css');
 @import url('components/header.css');
 @import url('components/links.css');
-
+@import url('components/profile-lite.css');
 /* 6. PAGES - Page-specific styles (use sparingly) */
 @import url('pages/page-specifc.css');
 
