--- a/CSS/layout/containers.css
+++ b/CSS/layout/containers.css
@@ -17,8 +17,8 @@
 
 .container3by3 { 
   display: grid;
-  grid-template-columns:  repeat(3, auto);
-  grid-template-rows: repeat(3, auto);
+  grid-template-columns:  repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   align-content: stretch;
   justify-items: stretch;
   gap: 10px;
