angie fixing back gloabl

--- a/css/base/global.css
+++ b/css/base/global.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    display: flex;
     flex-direction: column;
     /* Typography */
     font-family: var(--font-family-primary);
