angie please make this woprk now

--- a/CSS/layout/containers.css
+++ b/CSS/layout/containers.css
@@ -277,7 +277,7 @@
   }
 }
 
-.container3by3fr { 
+/* .container3by3fr { 
   background-color: red !important; 
   border: 5px solid blue !important; 
   min-height: 100vh !important; 
@@ -287,4 +287,4 @@
   background-color: yellow;
 grid-row-start: 1;
 grid-row-end: 3;
-}
+} */
