--- a/css/layout/containers.css
+++ b/css/layout/containers.css
@@ -17,8 +17,8 @@
 
 .container3by3 {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
   gap: 10px;
   flex: 1;
   width: 100%;
