--- a/css/layout/containers.css
+++ b/css/layout/containers.css
@@ -14,16 +14,16 @@
      
      Row first then column for naming     
    ============================================ */
- .container3by3 {
+.container3by3 {
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
   align-content: stretch;
   justify-items: stretch;
-  display: flex;
   gap: 10px;
-  width: 100%;
+  height: 100%;
   min-height: 100vh;
+  width: 100%;
 } 
 
 
