--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -31,24 +31,44 @@
 <footer>
     <div class="footer-grid">
 
-      
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="about-us.html" class="nav-link">About Us</a>
-                <a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
-
-            
-                <div class="footer-logo">
-                    <a href="index.html">
-                        <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
-                    </a>
-                </div>
-            
-                <a href="contact-us.html" class="nav-link">Contact Us</a>
-                <a href="https://www.instagram.com/lhok.ca/" class="nav-link" target="_blank">Start Lhoking</a>
-                <a href="terms-and-conditions.html" class="nav-link">Terms and Conditions</a>
-                    <a href="__user-approval-page.html" class="nav-link">Admin Approval</a>
-        <div class="footer-bottom">
-            <p>&copy; 2025 LHOK. All rights reserved.</p>
+        <div class="One">
+            <ul>
+                <li>Quick Links</li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="https://www.instagram.com/lhok.ca/" class="nav-link" target="_blank">Start Lhoking</a></li>
+            </ul>
         </div>
+            
+        <div class="Two">
+            <ul>
+                <li>Company</li>
+                <li><a href="about-us.html" class="nav-link">About Us</a></li>
+                <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+            </ul>
+        </div>               
+        <div class="Three">
+                <div class="footer-logo">
+                                <a href="index.html">
+                                    <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
+                                </a>
+                </div>
+        </div>
+        <div class="Four">
+            <ul>
+                <li>Legal</li>
+                <li><a href="privacy-policy.html" class="nav-link">Privacy Policy</a></li>
+                <li><a href="terms-and-conditions.html" class="nav-link">Terms and Conditions</a></li>
+            </ul>
+        </div>
+        <div class="Five">
+            <ul>
+                <li>Admin</li>
+                <li><a href="__user-approval-page.html" class="nav-link">Admin Approval</a></li>
+                <li>    </li>
+            </ul>
+                <div class="footer-bottom">
+                    <p>&copy; 2025 LHOK. All rights reserved.</p>
+                </div>
+
     </div>
 </footer>
