--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
         </div>
-        <a href="about-us.html" class="nav-link">About Us</a>
+        <!-- <a href="about-us.html" class="nav-link">About Us</a> -->
         
         <a href="contact-us.html" class="nav-link">Contact Us</a>
         <a href="public-profiles.html" class="nav-link">Available Professionals</a>
