--- a/css/layout/containers.css
+++ b/css/layout/containers.css
@@ -55,6 +55,29 @@
      Row first then column for naming*/
 
 
+.TwoThree-OneTwo {   
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  }
+  /*   1 2 3 4
+     1 -|x|x|-
+     2 -|x|x|-
+     3 -|-|-|-
+     4 -|-|-|- 
+     Row first then column for naming*/
+
+.TwoThree-TwoThree {   
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  }
+  /*   1 2 3 4
+     1 -|-|-|-
+     2 -|-|-|-
+     3 -|x|x|-
+     4 -|x|x|- 
+     Row first then column for naming*/
+
+
 .ThreeOne-FourTwo {
  
   grid-row: 3 / 4;
