--- a/css/components/profile-lite.css
+++ b/css/components/profile-lite.css
@@ -51,7 +51,7 @@ PROFILE SEARCH
         .profile-name {
             font-size: 1.5em;
             font-weight: bold;
-            color: #333;
+            color: #3a3a3a;
             text-align: center;
             margin-bottom: 5px;
         }
