Hunain - Changed security rules + centered texts

--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -210,6 +210,7 @@ PROFILE SEARCH
         }
 
         .no-profiles {
+            grid-column: 1/span1;
             text-align: center;
             padding: 60px;
             background: white;
