--- a/css/pages/page-specific-css.css
+++ b/css/pages/page-specific-css.css
@@ -101,6 +101,7 @@ the additional parameters should be added to "OneThree-Two*/
 /* Profile Picture Preview */
 .profile-picture-preview {
     margin-bottom: var(--spacing-md);
+    
 }
 
 .profile-picture-preview img {
@@ -111,6 +112,8 @@ the additional parameters should be added to "OneThree-Two*/
     border: 4px solid var(--color-primary);
     box-shadow: var(--shadow-md);
     background: white;
+    display: block;
+    margin: 0 auto;
 }
 
 /* File Input Styling */
