--- a/css/pages/page-specific-css.css
+++ b/css/pages/page-specific-css.css
@@ -93,7 +93,7 @@ the additional parameters should be added to "OneThree-Two*/
 .profile-picture-section {
     margin-bottom: var(--spacing-lg);
     padding: var(--spacing-lg);
-    background: var(--color-gray-light);
+    background: var(--color-primary-light);    ;
     border-radius: var(--border-radius-md);
     text-align: center;
 }
