hunain - added about us into header and footer

--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -6,6 +6,7 @@
             <p class="footer-col-title">Explore</p>
             <ul>
                 <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="./about-us.html" class="nav-link">About Us</a></li>
                 <li><a href="./public-profiles.html" class="nav-link">Find a Pro</a></li>
                 <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
             </ul>
